--- a/model1/package.json
+++ b/model1/package.json
@@ -24,6 +24,7 @@
     "expo-speech": "^13.0.0",
     "expo-status-bar": "~2.0.0",
     "firebase": "^11.1.0",
+    "lottie-react-native": "^7.2.2",
     "openai": "^4.76.3",
     "react": "18.3.1",
     "react-native": "0.76.5",
