--- a/model1/package.json
+++ b/model1/package.json
@@ -18,7 +18,7 @@
     "axios": "^1.7.9",
     "crypto-js": "^4.2.0",
     "expo": "~52.0.18",
-    "expo-av": "^15.0.1",
+    "expo-av": "^15.0.2",
     "expo-screen-orientation": "^8.0.3",
     "expo-secure-store": "^14.0.0",
     "expo-speech": "^13.0.0",
@@ -38,6 +38,7 @@
     "react-native-reanimated": "^3.16.5",
     "react-native-safe-area-context": "^5.0.0",
     "react-native-screens": "^4.3.0",
+    "react-native-sound": "^0.11.2",
     "react-native-tts": "^4.1.1",
     "react-native-vector-icons": "^10.2.0",
     "react-native-voice": "^0.3.0",
