--- a/model1/package.json
+++ b/model1/package.json
@@ -11,6 +11,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~4.0.1",
+    "@lottiefiles/dotlottie-react": "^0.6.5",
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/datetimepicker": "github:react-native-community/datetimepicker",
     "@react-native-cookies/cookies": "github:react-native-cookies/cookies",
@@ -50,9 +52,11 @@
     "@babel/core": "^7.26.10",
     "@babel/preset-env": "^7.26.9",
     "@jest/globals": "^29.7.0",
+    "@types/react": "~18.3.12",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
-    "supertest": "^7.0.0"
+    "supertest": "^7.0.0",
+    "typescript": "^5.3.3"
   },
   "private": true
 }
