--- a/model1/package.json
+++ b/model1/package.json
@@ -1,13 +1,16 @@
 {
   "name": "model1",
-  "license": "0BSD",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
+  "private": true,
+  "license": "0BSD",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
+    "server": "cd server && node server.js",
     "test": "jest"
   },
   "dependencies": {
@@ -19,6 +22,9 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.0",
     "axios": "^1.7.9",
+    "body-parser": "^1.20.2",
+    "concurrently": "^8.2.1",
+    "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
     "expo": "~52.0.18",
     "expo-av": "^15.0.2",
@@ -26,6 +32,7 @@
     "expo-secure-store": "^14.0.0",
     "expo-speech": "^13.0.0",
     "expo-status-bar": "~2.0.0",
+    "express": "^4.18.2",
     "firebase": "^11.1.0",
     "lottie-react-native": "^7.2.2",
     "openai": "^4.76.3",
@@ -42,6 +49,7 @@
     "react-native-safe-area-context": "^5.0.0",
     "react-native-screens": "^4.3.0",
     "react-native-sound": "^0.11.2",
+    "react-native-toast-message": "^2.2.1",
     "react-native-tts": "^4.1.1",
     "react-native-vector-icons": "^10.2.0",
     "react-native-voice": "^0.3.0",
@@ -55,8 +63,8 @@
     "@types/react": "~18.3.12",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
+    "nodemon": "^3.0.1",
     "supertest": "^7.0.0",
     "typescript": "^5.3.3"
-  },
-  "private": true
+  }
 }
