--- a/model1/package.json
+++ b/model1/package.json
@@ -14,11 +14,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@expo/metro-runtime": "~4.0.1",
     "@lottiefiles/dotlottie-react": "^0.6.5",
+    "@mui/material": "^6.4.7",
+    "@mui/x-date-pickers": "^7.27.3",
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/datetimepicker": "github:react-native-community/datetimepicker",
     "@react-native-cookies/cookies": "github:react-native-cookies/cookies",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.0",
     "axios": "^1.7.9",
@@ -37,6 +42,7 @@
     "lottie-react-native": "^7.2.2",
     "openai": "^4.76.3",
     "react": "18.3.1",
+    "react-datepicker": "^8.2.1",
     "react-native": "0.76.5",
     "react-native-animatable": "^1.4.0",
     "react-native-chart-kit": "^6.12.0",
@@ -44,11 +50,13 @@
     "react-native-crypto-js": "^1.0.0",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "^2.21.2",
+    "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "^3.16.5",
     "react-native-safe-area-context": "^5.0.0",
     "react-native-screens": "^4.3.0",
     "react-native-sound": "^0.11.2",
+    "react-native-svg": "^15.11.2",
     "react-native-toast-message": "^2.2.1",
     "react-native-tts": "^4.1.1",
     "react-native-vector-icons": "^10.2.0",
