--- a/model1/package.json
+++ b/model1/package.json
@@ -33,6 +33,7 @@
     "crypto-js": "^4.2.0",
     "expo": "~52.0.18",
     "expo-av": "^15.0.2",
+    "expo-clipboard": "^7.0.1",
     "expo-screen-orientation": "^8.0.3",
     "expo-secure-store": "^14.0.0",
     "expo-speech": "^13.0.0",
